--- a/systemd/omobus-docs.service
+++ b/systemd/omobus-docs.service
@@ -1,13 +1,13 @@
 [Unit]
-Description=OMOBUS zero service (e2o)
+Description=OMOBUS zero service (docs)
 After=local-fs.target network.target
 
 [Service]
 #Type=forking
-PIDFile=/var/run/omobus.d/omobus-e2o.pid
+PIDFile=/var/run/omobus.d/omobus-docs.pid
 ExecStartPre=/bin/mkdir -m 0755 -p /var/run/omobus.d
 ExecStartPre=/bin/chown omobus:omobus /var/run/omobus.d
-ExecStart=/usr/local/sbin/omobusd e2o -x -u omobus -g omobus -p /var/run/omobus.d/omobus-e2o.pid
+ExecStart=/usr/local/sbin/omobusd docs -x -u omobus -g omobus -p /var/run/omobus.d/omobus-docs.pid
 ExecStop=/bin/kill -s USR1 $MAINPID
 
 [Install]
