systemd: fixed service names.

--- a/systemd/omobus-data.service
+++ b/systemd/omobus-data.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS zero service (data)
+Description=[omobusd: zero-data] service
 After=local-fs.target network.target
 
 [Service]
